bindings/c/whiteout_mdx.h

typedef struct whiteout_MdxLayer whiteout_MdxLayer;
typedef struct whiteout_MdxLayerSubTexture whiteout_MdxLayerSubTexture;
typedef struct whiteout_MdxMaterial whiteout_MdxMaterial;
typedef struct whiteout_MdxTrackVector3f whiteout_MdxTrackVector3f;
typedef struct whiteout_MdxTrackU32 whiteout_MdxTrackU32;
typedef struct whiteout_MdxTrackF32 whiteout_MdxTrackF32;
/* ── MdxLayer ─────────────────────────────────────────────── */

/* Material rendering layer */
/*  */
/* Materials can have multiple layers, each with its own texture and blending mode. Layers control how textures are combined and rendered. */
whiteout_MdxLayer* whiteout_mdx_MdxLayer_new(void);
void whiteout_mdx_MdxLayer_delete(whiteout_MdxLayer* self);
/* Blending mode */
int32_t whiteout_mdx_MdxLayer_get_filterMode(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_filterMode(whiteout_MdxLayer* self, int32_t value);
/* Rendering flags */
int32_t whiteout_mdx_MdxLayer_get_shadingFlags(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_shadingFlags(whiteout_MdxLayer* self, int32_t value);
/* Texture index (versions 800-1100) */
uint32_t whiteout_mdx_MdxLayer_get_textureId(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_textureId(whiteout_MdxLayer* self, uint32_t value);
/* Texture animation index */
uint32_t whiteout_mdx_MdxLayer_get_textureAnimationId(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_textureAnimationId(whiteout_MdxLayer* self, uint32_t value);
/* Texture coordinate set index */
uint32_t whiteout_mdx_MdxLayer_get_coordId(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_coordId(whiteout_MdxLayer* self, uint32_t value);
/* Layer opacity */
float whiteout_mdx_MdxLayer_get_alpha(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_alpha(whiteout_MdxLayer* self, float value);
/* Emissive light intensity (default 1.0) */
float whiteout_mdx_MdxLayer_get_emissiveGain(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_emissiveGain(whiteout_MdxLayer* self, float value);
/* Fresnel effect color */
whiteout_Vector3f* whiteout_mdx_MdxLayer_get_fresnelColor(whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_fresnelColor(whiteout_MdxLayer* self, const whiteout_Vector3f* value);
/* Fresnel effect opacity */
float whiteout_mdx_MdxLayer_get_fresnelOpacity(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_fresnelOpacity(whiteout_MdxLayer* self, float value);
/* Fresnel team color factor */
float whiteout_mdx_MdxLayer_get_fresnelTeamColor(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_fresnelTeamColor(whiteout_MdxLayer* self, float value);
/* Shader to use for this layer */
int32_t whiteout_mdx_MdxLayer_get_shader(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_shader(whiteout_MdxLayer* self, int32_t value);
/* True if using Reforged HD shading */
int32_t whiteout_mdx_MdxLayer_get_isHd(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_isHd(whiteout_MdxLayer* self, int32_t value);
/* Multi-texture support (version 1200+) */
size_t whiteout_mdx_MdxLayer_get_subTextures_count(const whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_resize_subTextures(whiteout_MdxLayer* self, size_t count);
whiteout_MdxLayerSubTexture* whiteout_mdx_MdxLayer_get_subTextures_at(whiteout_MdxLayer* self, size_t index);
/* Texture ID animation (versions 800-1100) */
whiteout_MdxTrackU32* whiteout_mdx_MdxLayer_get_textureIdTracks(whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_textureIdTracks(whiteout_MdxLayer* self, const whiteout_MdxTrackU32* value);
/* Alpha animation */
whiteout_MdxTrackF32* whiteout_mdx_MdxLayer_get_alphaTracks(whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_alphaTracks(whiteout_MdxLayer* self, const whiteout_MdxTrackF32* value);
/* Emissive gain animation */
whiteout_MdxTrackF32* whiteout_mdx_MdxLayer_get_emissiveGainTracks(whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_emissiveGainTracks(whiteout_MdxLayer* self, const whiteout_MdxTrackF32* value);
/* Fresnel color animation */
whiteout_MdxTrackVector3f* whiteout_mdx_MdxLayer_get_fresnelColorTracks(whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_fresnelColorTracks(whiteout_MdxLayer* self, const whiteout_MdxTrackVector3f* value);
/* Fresnel alpha animation */
whiteout_MdxTrackF32* whiteout_mdx_MdxLayer_get_fresnelAlphaTracks(whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_fresnelAlphaTracks(whiteout_MdxLayer* self, const whiteout_MdxTrackF32* value);
/* Fresnel team color animation */
whiteout_MdxTrackF32* whiteout_mdx_MdxLayer_get_fresnelTeamColorTracks(whiteout_MdxLayer* self);
void whiteout_mdx_MdxLayer_set_fresnelTeamColorTracks(whiteout_MdxLayer* self, const whiteout_MdxTrackF32* value);
/* ── MdxLayerSubTexture ─────────────────────────────────────────────── */

/* Sub-texture definition (Reforged multi-texture) */
whiteout_MdxLayerSubTexture* whiteout_mdx_MdxLayerSubTexture_new(void);
void whiteout_mdx_MdxLayerSubTexture_delete(whiteout_MdxLayerSubTexture* self);
/* Index into texture array */
uint32_t whiteout_mdx_MdxLayerSubTexture_get_textureId(const whiteout_MdxLayerSubTexture* self);
void whiteout_mdx_MdxLayerSubTexture_set_textureId(whiteout_MdxLayerSubTexture* self, uint32_t value);
/* Texture slot number */
int32_t whiteout_mdx_MdxLayerSubTexture_get_slot(const whiteout_MdxLayerSubTexture* self);
void whiteout_mdx_MdxLayerSubTexture_set_slot(whiteout_MdxLayerSubTexture* self, int32_t value);
/* Texture ID animation */
whiteout_MdxTrackU32* whiteout_mdx_MdxLayerSubTexture_get_tracks(whiteout_MdxLayerSubTexture* self);
void whiteout_mdx_MdxLayerSubTexture_set_tracks(whiteout_MdxLayerSubTexture* self, const whiteout_MdxTrackU32* value);
/* ── MdxMaterial ─────────────────────────────────────────────── */

/* Material definition with rendering properties */
/*  */
/* Materials define how surfaces are rendered. Each material contains one or more layers that specify textures and blending modes. */
whiteout_MdxMaterial* whiteout_mdx_MdxMaterial_new(void);
void whiteout_mdx_MdxMaterial_delete(whiteout_MdxMaterial* self);
/* Rendering priority (higher = render last); signed */
int32_t whiteout_mdx_MdxMaterial_get_priorityPlane(const whiteout_MdxMaterial* self);
void whiteout_mdx_MdxMaterial_set_priorityPlane(whiteout_MdxMaterial* self, int32_t value);
/* Material flags */
int32_t whiteout_mdx_MdxMaterial_get_flags(const whiteout_MdxMaterial* self);
void whiteout_mdx_MdxMaterial_set_flags(whiteout_MdxMaterial* self, int32_t value);
/* Shader name (Reforged) */
whiteout_CString whiteout_mdx_MdxMaterial_get_shader(const whiteout_MdxMaterial* self);
void whiteout_mdx_MdxMaterial_set_shader(whiteout_MdxMaterial* self, const char* value);
/* Rendering layers */
size_t whiteout_mdx_MdxMaterial_get_layers_count(const whiteout_MdxMaterial* self);
void whiteout_mdx_MdxMaterial_resize_layers(whiteout_MdxMaterial* self, size_t count);
whiteout_MdxLayer* whiteout_mdx_MdxMaterial_get_layers_at(whiteout_MdxMaterial* self, size_t index);