bindings/java/src/main/java/whiteout/mdx/internal/Native.java


    // -- MdxLayer --
    public static final MethodHandle whiteout_mdx_MdxLayer_new = find(
        "whiteout_mdx_MdxLayer_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_delete = find(
        "whiteout_mdx_MdxLayer_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_filterMode = find("whiteout_mdx_MdxLayer_get_filterMode", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_set_filterMode = find("whiteout_mdx_MdxLayer_set_filterMode", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_shadingFlags = find("whiteout_mdx_MdxLayer_get_shadingFlags", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_set_shadingFlags = find("whiteout_mdx_MdxLayer_set_shadingFlags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_textureId = find("whiteout_mdx_MdxLayer_get_textureId", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_set_textureId = find("whiteout_mdx_MdxLayer_set_textureId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_textureAnimationId = find("whiteout_mdx_MdxLayer_get_textureAnimationId", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_set_textureAnimationId = find("whiteout_mdx_MdxLayer_set_textureAnimationId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_coordId = find("whiteout_mdx_MdxLayer_get_coordId", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_set_coordId = find("whiteout_mdx_MdxLayer_set_coordId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_alpha = find("whiteout_mdx_MdxLayer_get_alpha", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_set_alpha = find("whiteout_mdx_MdxLayer_set_alpha", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_emissiveGain = find("whiteout_mdx_MdxLayer_get_emissiveGain", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_set_emissiveGain = find("whiteout_mdx_MdxLayer_set_emissiveGain", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_fresnelColor = find("whiteout_mdx_MdxLayer_get_fresnelColor", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_set_fresnelColor = find("whiteout_mdx_MdxLayer_set_fresnelColor", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_fresnelOpacity = find("whiteout_mdx_MdxLayer_get_fresnelOpacity", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_set_fresnelOpacity = find("whiteout_mdx_MdxLayer_set_fresnelOpacity", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_fresnelTeamColor = find("whiteout_mdx_MdxLayer_get_fresnelTeamColor", FunctionDescriptor.of(ValueLayout.JAVA_FLOAT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_set_fresnelTeamColor = find("whiteout_mdx_MdxLayer_set_fresnelTeamColor", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_FLOAT));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_shader = find("whiteout_mdx_MdxLayer_get_shader", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_set_shader = find("whiteout_mdx_MdxLayer_set_shader", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_isHd = find("whiteout_mdx_MdxLayer_get_isHd", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_set_isHd = find("whiteout_mdx_MdxLayer_set_isHd", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_subTextures_count = find("whiteout_mdx_MdxLayer_get_subTextures_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_resize_subTextures = find("whiteout_mdx_MdxLayer_resize_subTextures", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_subTextures_at = find("whiteout_mdx_MdxLayer_get_subTextures_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_textureIdTracks = find("whiteout_mdx_MdxLayer_get_textureIdTracks", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_set_textureIdTracks = find("whiteout_mdx_MdxLayer_set_textureIdTracks", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_alphaTracks = find("whiteout_mdx_MdxLayer_get_alphaTracks", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_set_alphaTracks = find("whiteout_mdx_MdxLayer_set_alphaTracks", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_emissiveGainTracks = find("whiteout_mdx_MdxLayer_get_emissiveGainTracks", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_set_emissiveGainTracks = find("whiteout_mdx_MdxLayer_set_emissiveGainTracks", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_fresnelColorTracks = find("whiteout_mdx_MdxLayer_get_fresnelColorTracks", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_set_fresnelColorTracks = find("whiteout_mdx_MdxLayer_set_fresnelColorTracks", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_fresnelAlphaTracks = find("whiteout_mdx_MdxLayer_get_fresnelAlphaTracks", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_set_fresnelAlphaTracks = find("whiteout_mdx_MdxLayer_set_fresnelAlphaTracks", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_get_fresnelTeamColorTracks = find("whiteout_mdx_MdxLayer_get_fresnelTeamColorTracks", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayer_set_fresnelTeamColorTracks = find("whiteout_mdx_MdxLayer_set_fresnelTeamColorTracks", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

    // -- MdxLayerSubTexture --
    public static final MethodHandle whiteout_mdx_MdxLayerSubTexture_new = find(
        "whiteout_mdx_MdxLayerSubTexture_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayerSubTexture_delete = find(
        "whiteout_mdx_MdxLayerSubTexture_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayerSubTexture_get_textureId = find("whiteout_mdx_MdxLayerSubTexture_get_textureId", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayerSubTexture_set_textureId = find("whiteout_mdx_MdxLayerSubTexture_set_textureId", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxLayerSubTexture_get_slot = find("whiteout_mdx_MdxLayerSubTexture_get_slot", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayerSubTexture_set_slot = find("whiteout_mdx_MdxLayerSubTexture_set_slot", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxLayerSubTexture_get_tracks = find("whiteout_mdx_MdxLayerSubTexture_get_tracks", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxLayerSubTexture_set_tracks = find("whiteout_mdx_MdxLayerSubTexture_set_tracks", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));

    // -- MdxMaterial --
    public static final MethodHandle whiteout_mdx_MdxMaterial_new = find(
        "whiteout_mdx_MdxMaterial_new", FunctionDescriptor.of(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxMaterial_delete = find(
        "whiteout_mdx_MdxMaterial_delete", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxMaterial_get_priorityPlane = find("whiteout_mdx_MdxMaterial_get_priorityPlane", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxMaterial_set_priorityPlane = find("whiteout_mdx_MdxMaterial_set_priorityPlane", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxMaterial_get_flags = find("whiteout_mdx_MdxMaterial_get_flags", FunctionDescriptor.of(ValueLayout.JAVA_INT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxMaterial_set_flags = find("whiteout_mdx_MdxMaterial_set_flags", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_INT));
    public static final MethodHandle whiteout_mdx_MdxMaterial_get_shader = find("whiteout_mdx_MdxMaterial_get_shader", FunctionDescriptor.of(CSTRING_LAYOUT, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxMaterial_set_shader = find("whiteout_mdx_MdxMaterial_set_shader", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxMaterial_get_layers_count = find("whiteout_mdx_MdxMaterial_get_layers_count", FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS));
    public static final MethodHandle whiteout_mdx_MdxMaterial_resize_layers = find("whiteout_mdx_MdxMaterial_resize_layers", FunctionDescriptor.ofVoid(ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
    public static final MethodHandle whiteout_mdx_MdxMaterial_get_layers_at = find("whiteout_mdx_MdxMaterial_get_layers_at", FunctionDescriptor.of(ValueLayout.ADDRESS, ValueLayout.ADDRESS, ValueLayout.JAVA_LONG));
